Various user sign-up flow changes. Preview loads in a little box, loading icons, ability to unsubscribe and/or amend details. Won't let you subscribe without agreeing to terms and conditions, modals for info about getting usernames and sign-up confirmation. closes #30 #28 #27 #26 #9

--- a/newsletter_templates/sign_up_confirmation.Rmd
+++ b/newsletter_templates/sign_up_confirmation.Rmd
@@ -4,9 +4,15 @@ output: blastula::blastula_email
 params:
   name: NULL
   email: NULL
-  irecord_username: NULL
-  ispot_username: NULL
-  inat_username: NULL
+  irecord_username: NA
+  ispot_username: NA
+  inat_username: NA
+  ispot_key: NA
+  irecord_key: NA
+  data_stories: "all"
+  randomise: FALSE
+  start_date: NA
+  end_date: NA
 ---
 
 ```{r setup, include=FALSE}
