--- a/data_story_development/2022-04-13_CT_data_story_development.Rmd
+++ b/data_story_development/2022-04-13_CT_data_story_development.Rmd
@@ -25,6 +25,7 @@ library(dplyr) #data manipulation
 library(ggplot2) #plotting
 library(sf) #spatial processing
 library(ggspatial) # for plotting static maps
+library(spData)
 
 library(nominatimlite) # for getting place names
 
@@ -50,6 +51,13 @@ library(geojsonsf)
   height:300px;
   object-fit:cover;
   border-radius:50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+body{
+  font-family: Helvetica;
+  font-size: 14pt;
 }
 
 
@@ -184,14 +192,17 @@ month_name <- month.name[month_featured]
 
 ![](../www/Decide_artwork_RGB.png)
 
-```{r}
+```{r wel, echo  = F, results='asis'}
 #switched text whether or not the newsletter is personalised
+
+
 if(personalised){
-  h1("Your personalised newsletter")
-  p(paste0("Welcome to your personalised newsletter for ", month_name, ". Here are your insights for based on your recording from last month."))
+   tags$h1("Your personalised newsletter") %>% print()
+   p("Welcome to your personalised newsletter for ", strong(month_name), ". Here are insights and inspirations based on your recording from last month.") %>% print()
+  
 } else {
-  h1("Your newsletter") 
-  p(paste0("Welcome to your  newsletter for ", month_name, ". Here are insights for based on recording from last month."))
+  tags$h1("Your newsletter") %>% print()
+  p("Welcome to your  newsletter for ", strong(month_name), ". Here are insights based on recording from DECIDErs over the last month and further inspirations.") %>% print()
 }
 
 
@@ -263,7 +274,7 @@ if(personalised){
 img(src=photo_url,class="circleimage") %>% print()
 p(em(photo_attribution)) %>% print()
 
-p(a("Go to DECIDE", href="https://decide.ceh.ac.uk/opts/scoremap/map"))
+p(a("Go to DECIDE", href="https://decide.ceh.ac.uk/opts/scoremap/map")) %>% print()
 
 hr() #line across
 ```
@@ -287,8 +298,8 @@ high_priority_records <- ds2_data  %>%
   group_by(grid_square) %>% 
   summarise(n=n(),
             n_species = length(unique(scientific_name)),
-            latitude = first(latitude),
-            longitude = first(longitude))
+            latitude = mean(latitude),
+            longitude = mean(longitude))
 
 #how many species in total were recorded at these high priority locations?
 n_species <- ds2_data %>% filter(recording_priority >0.008) %>% pull(scientific_name) %>% unique() %>% length()
@@ -315,35 +326,59 @@ suggestions <- fromJSON(fromJSON(rawToChar(res$content)))
 suggestions <- suggestions$geojson %>% geojson_sf()
 
 # VISUALISE
-
+library(ggrepel)
 # 
 if(personalised){
-  p("In",month_name_got_personal_records_from,"you recorded in ", nrow(high_priority_records) ,"high value locations and recorded a total of ",n_species," species at these sites. Records at these sites fill gaps in our understanding of species’ distributions.") %>% print()
+  p("In",month_name_got_personal_records_from,"you recorded in ", strong(nrow(high_priority_records)) ,"high priority locations and recorded a total of ",strong(n_species)," species at these sites. Records at these sites fill gaps in our understanding of species’ distributions.") %>% print()
   
   # generate the map using ggspatial package
   ds2_map <- ggplot() +
     # loads background map tiles from a tile source
-    annotation_map_tile(zoomin = -1,progress="none")+
-    layer_spatial(high_priority_records,mapping = aes(size = n))+ 
-    fixed_plot_aspect() #make the plot square
+    annotation_map_tile(type = "cartolight", zoomin = -1,progress="none")+
+    layer_spatial(high_priority_records,mapping = aes(size = n), shape = 15, alpha = 0.5, col = "#e65c00" )+ 
+    #layer_spatial(high_priority_records,size = 3, alpha = 0.3)+ 
+    fixed_plot_aspect() + #make the plot square
+    #labs(size="Number Of Records at a location")+ 
+    #stat_spatial_identity(aes(high_priority_records$latitude, high_priority_records$longitude, label = high_priority_records$n), geom = "label_repel") +
+    theme(axis.text.x=element_blank(), #remove x axis labels
+        axis.ticks.x=element_blank(), #remove x axis ticks
+        axis.text.y=element_blank(),  #remove y axis labels
+        axis.ticks.y=element_blank(),  #remove y axis ticks
+        legend.position = "none",
+        panel.border = element_blank(), panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        plot.caption = element_text(color = "#767675", face = "italic"))+ 
+    labs(caption = "Square size indicates the number of records in a location")
   
   #cat("<div class='circlemap'>") # this isa way we can apply css to images that are plotted by putting them in the
   print(ds2_map)
   #cat("</div>")
 }
 
-p("Why not go here:")
+h3("Some inspiration?") %>% print()
+
+p("Below are some high priority location suggestion, why not go to one of these next time you record?")
 
 ds2_map_2 <- ggplot() +
   # loads background map tiles from a tile source
-  annotation_map_tile(zoomin = -1,progress="none")+
-  layer_spatial(suggestions)+ 
-  fixed_plot_aspect()
-
+  annotation_map_tile(type = "cartolight", zoomin = -1,progress="none")+
+  layer_spatial(suggestions, col = "#331400", size = 4, alpha = 0.3)+
+  layer_spatial(suggestions, col = "#e65c00", size = 3, alpha = 0.6)+
+  fixed_plot_aspect() + 
+  theme(axis.text.x=element_blank(), #remove x axis labels
+        axis.ticks.x=element_blank(), #remove x axis ticks
+        axis.text.y=element_blank(),  #remove y axis labels
+        axis.ticks.y=element_blank(),  #remove y axis ticks
+        legend.position = "none",
+        panel.border = element_blank(), panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        plot.caption = element_text(color = "#767675", face = "italic"))+ 
+        labs(caption = "The orange locations are all high priority areas according to our estimations")
+        
 print(ds2_map_2)
 
 
-p(a("Go to DECIDE", href="https://decide.ceh.ac.uk/opts/scoremap/map"))
+p(a("Go to DECIDE and explore these suggestions?", href="https://decide.ceh.ac.uk/opts/scoremap/map"))
 
 
 hr() #line across
@@ -358,29 +393,50 @@ hr() #line across
 
 
 # VISUALISE
-p("Look at all those dots")
+p("The DECIDE comunity has been very active this month. See where your records fall within them:")
 
 if(personalised){
   ds3_map <-ggplot()+
-    annotation_map_tile(zoomin = -1,progress="none")+
-    annotation_spatial(community_data_this_month, col = "black") +
-    layer_spatial(individual_data_this_month,col = "red")+ 
-    fixed_plot_aspect()
+    annotation_map_tile(type = "cartolight", zoomin = -1,progress="none")+
+    annotation_spatial(community_data_this_month, col = "#331400", size = 2, alpha = 0.3) +
+    layer_spatial(individual_data_this_month,col = "#E69F00", size = 3, alpha = 0.3)+ 
+    fixed_plot_aspect()+
+    theme(axis.text.x=element_blank(), #remove x axis labels
+        axis.ticks.x=element_blank(), #remove x axis ticks
+        axis.text.y=element_blank(),  #remove y axis labels
+        axis.ticks.y=element_blank(),  #remove y axis ticks
+        legend.position = "none",
+        panel.border = element_blank(), panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        plot.caption = element_text(color = "#767675", face = "italic"))+ 
+        labs(caption = "This month's records from the DECIDE community with yours highlighted in orange")
 } else {
   ds3_map <-ggplot()+
-    annotation_map_tile(zoomin = -1,progress="none")+
-    layer_spatial(community_data_this_month, col = "black") +
-    fixed_plot_aspect()
+    annotation_map_tile(type = "cartolight", zoomin = -1,progress="none")+
+    layer_spatial(community_data_this_month, col = "#331400", size = 2, alpha = 0.3)+
+    fixed_plot_aspect()+
+    theme(axis.text.x=element_blank(), #remove x axis labels
+        axis.ticks.x=element_blank(), #remove x axis ticks
+        axis.text.y=element_blank(),  #remove y axis labels
+        axis.ticks.y=element_blank(),  #remove y axis ticks
+        legend.position = "none",
+        panel.border = element_blank(), panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        plot.caption = element_text(color = "#767675", face = "italic"))+ 
+        labs(caption = "This month's records from the DECIDE community")
 }
 
 print(ds3_map)
+
+p("Why not find some gaps in your area using the DECIDE tool?")
+
 
 p(a("Go to DECIDE", href="https://decide.ceh.ac.uk/opts/scoremap/map"))
 
 hr() #line across
 ```
 
-### Your DECIDE reputation
+### How is your DECIDE score?
 
 ```{r ds4, echo  = F, results='asis'}
 #DATA STORY 4
@@ -409,21 +465,35 @@ decide_reputation_data <- decide_reputation_data %>%
 
 if(personalised){ #set colour = target_user to highlight the personalisation
   
-  p(paste0("In ",month_name_got_personal_records_from," you recorded some stuff look at this plot")) %>% print()
+  p(paste0("High DECIDE scores indicate records from high priority areas. See how your records from ",month_name_got_personal_records_from," add up")) %>% print()
   ds4_plot <- ggplot(decide_reputation_data,aes(x = observed_on ,y = cumulative_recording_priority*1000,group = observed_by,colour = target_user))+
-    geom_line(size = 2)+
-    xlab("Date")+
-    ylab("DECIDE-o-meter")
+    geom_line(aes(linetype=target_user, size = target_user, alpha = target_user))+
+    scale_linetype_manual(values=c("dashed", "solid"))+
+    scale_color_manual(values=c('#999999','#E69F00'))+
+    scale_size_manual(values=c(0.5, 3))+
+    scale_alpha_manual(values = c(0.4, 0.8))+
+    xlab("")+
+    ylab("DECIDE-o-meter")+ 
+    theme_minimal() +
+    theme(legend.position = "none",
+        plot.caption = element_text(color = "#767675", face = "italic"))+ 
+        labs(caption = "Your cumulative DECIDE scores in orange with community scores in gray")
 } else {
   
-  p(paste0("In ",month_name," some stuff was recorded look at this plot")) %>% print()
+  p(paste0("High DECIDE scores indicate records from high priority areas. See how the community stacks up scores in ",month_name)) %>% print()
   ds4_plot <- ggplot(decide_reputation_data,aes(x = observed_on ,y = cumulative_recording_priority*1000,group = observed_by))+
-    geom_line(size = 2)+
-    xlab("Date")+
-    ylab("DECIDE-o-meter")
+    geom_line(size = 1, linetype = "dashed", color = "#767675")+
+    xlab("")+
+    ylab("DECIDE-o-meter")+ 
+    theme_minimal() +
+    theme(legend.position = "none",
+        plot.caption = element_text(color = "#767675", face = "italic"))+ 
+        labs(caption = "Cumulative DECIDE scores for recorders in the community")
 }
 
 print(ds4_plot)
+
+p("Why not find areas with high priority scores using the DECIDE tool?")
 
 p(a("Go to DECIDE", href="https://decide.ceh.ac.uk/opts/scoremap/map"))
 
