--- a/sign_up_app/email_templates/sign_up_confirmation.Rmd
+++ b/sign_up_app/email_templates/sign_up_confirmation.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(echo = TRUE,error=T)
 
 ## Hello `r params$name`!
 
-Thank you for signing up to receive the MyDECIDE monthly personalised newsletter.
+Thank you for signing up to receive the MyDECIDE personalised emails.
 
 ### Your details
 
